--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,21 @@ footer {
   background-color: #e8e4e6;
 }
 
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+header .sx {
+  display: flex;
+  align-items: center;
+}
+
+header .dx {
+  display: flex;
+  align-items: center;
+}
+
 main {
   flex-grow: 1;
   background-color: #004643;
