feat: selezione celle

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header .sx {
 header .dx {
   display: flex;
   align-items: center;
+  gap: 20px;
 }
 
 /*
@@ -63,7 +64,6 @@ main {
 }
 
 .board {
-  border: 1px solid red;
   height: 600px;
   width: 600px;
   display: flex;
@@ -72,9 +72,20 @@ main {
 }
 
 .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: calc(100% / 10);
   width: calc(100% / 10);
   border: 1px solid black;
+}
+
+.cell:hover {
+  cursor: pointer;
+}
+
+.active-cell {
+  background-color: #3da9fc;
 }
 
 .btn-play {
