--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ header .dx {
   gap: 20px;
 }
 
+select {
+  border-radius: 10px;
+  padding: 3px 10px;
+}
+
 .btn-play {
   cursor: pointer;
   border: 1px solid black;
